// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin example js : Compiled JS 1`] = `
"import { css as less } from 'css-literal-loader/styled';
const SIZE = 75;

const styles =
/*#__PURE__*/
require(\\"./example-styles.less\\");"
`;

exports[`Plugin example styles: example-styles.less 1`] = `
"
  .foo {
    color: red;
    width: 75px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
"
`;

exports[`Plugin hoist-import ButtonBase: hoist-import-ButtonBase.css 1`] = `
"@import '~./styles/mixins.scss';
.button-base {

  

  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: 1px solid transparent;

}"
`;

exports[`Plugin hoist-import js : Compiled JS 1`] = `
"import { styled } from 'css-literal-loader/styled';
const ButtonBase =
/*#__PURE__*/
styled('button', \\"ButtonBase\\", require(\\"./hoist-import-ButtonBase.css\\"), s => [s[\\"buttonBase\\"] || s[\\"button-base\\"]]);"
`;

exports[`Plugin multiple-components FancyBox: multiple-components-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
		width: 96px;
		height: 96px;
	}

  

}
.fancy-box-variant-0 {

    background: white;
    color: palevioletred;
  
}"
`;

exports[`Plugin multiple-components FancyHeader: multiple-components-FancyHeader.css 1`] = `
".fancy-header {

  color: red;
  width: 75px;

  ;

}
.fancy-header-variant-1 {

      background: white;
      color: palevioletred;
    
}"
`;

exports[`Plugin multiple-components js : Compiled JS 1`] = `
"import { styled, css } from 'css-literal-loader/styled';
const SIZE = 75; // prettier-ignore

const FancyBox =
/*#__PURE__*/
styled('div', \\"FancyBox\\", require(\\"./multiple-components-FancyBox.css\\"), s => [s[\\"fancyBox\\"] || s[\\"fancy-box\\"], props => props.primary && (s[\\"fancyBoxVariant0\\"] || s[\\"fancy-box-variant-0\\"])]);
const FancyHeader =
/*#__PURE__*/
styled('h2', \\"FancyHeader\\", require(\\"./multiple-components-FancyHeader.css\\"), s => [s[\\"fancyHeader\\"] || s[\\"fancy-header\\"], props => props.primary && (s[\\"fancyHeaderVariant1\\"] || s[\\"fancy-header-variant-1\\"])]);"
`;

exports[`Plugin no-global js : Compiled JS 1`] = `
"const SIZE = 75;
const styles = less\`
  .foo {
    color: red;
    width: \${SIZE}px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
\`;"
`;

exports[`Plugin styled FancierBox: styled-FancierBox.css 1`] = `
".fancier-box {

  color: ultra-red;

}"
`;

exports[`Plugin styled FancyBox: styled-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
		width: 96px;
		height: 96px;
	}

  

}
.fancy-box-variant-0 {

    background: white;
    color: palevioletred;
  
}"
`;

exports[`Plugin styled js : Compiled JS 1`] = `
"import { styled, css } from 'css-literal-loader/styled';
const SIZE = 75; // prettier-ignore

const FancyBox =
/*#__PURE__*/
styled('div', \\"FancyBox\\", require(\\"./styled-FancyBox.css\\"), s => [s[\\"fancyBox\\"] || s[\\"fancy-box\\"], props => props.primary && (s[\\"fancyBoxVariant0\\"] || s[\\"fancy-box-variant-0\\"])]);
const FancierBox =
/*#__PURE__*/
styled(FancyBox, \\"FancierBox\\", require(\\"./styled-FancierBox.css\\"), s => [s[\\"fancierBox\\"] || s[\\"fancier-box\\"]]);"
`;
